--- a/source/index.html
+++ b/source/index.html
@@ -5,17 +5,54 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lifetour</title>
+    <link rel="icon" href="favicon.ico">
+    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon.png">
     <link rel="stylesheet" href="sass/style.scss">
   </head>
 
   <body class="page-body">
+    <header class="header" data-test="header">
+      <div class="header__wrapper">
+        <a class="header__logo" href="#" aria-current="true">
+          <img class="header__logo-image" src="img/logo-white.svg" width="142" height="42" alt="">
+        </a>
+
+        <nav class="header__nav navigation">
+          <ul class="navigation__list">
+            <li class="navigation__item"><a class="navigation__link" href="">Туры</a></li>
+            <li class="navigation__item"><a class="navigation__link" href="">Обучение</a></li>
+            <li class="navigation__item"><a class="navigation__link" href="">О нас</a></li>
+            <li class="navigation__item"><a class="navigation__link" href="">Отзывы</a></li>
+            <li class="navigation__item"><a class="navigation__link" href="">Фотографии</a></li>
+            <li class="navigation__item"><a class="navigation__link" href="">Контакты</a></li>
+          </ul>
+
+          <button class="navigation__button" type="button">
+            <span class="visually-hidden">Открыть меню.</span>
+          </button>
+        </nav>
+
+        <div class="header__link-wrapper">
+          <a class="header__link" href="tel: 88000000000">8 800 000-00-00</a>
+        </div>
+      </div>
+    </header>
+
+    <main>
+
+    </main>
+
+    <footer>
+
+    </footer>
+
     <!-- пример использования спрайта -->
-    <img src="/__spritemap#sprite-logo-view" alt="Это спрайт">
+    <!-- <img src="/__spritemap#sprite-logo-view" alt="Это спрайт">
     <svg>
       <use href="/__spritemap#sprite-user"></use>
-    </svg>
+    </svg> -->
     <!-- примеры требуемых атрибутов data-test="*" -->
-    <div data-test="header">header</div>
+    <!-- <div data-test="header">header</div>
     <div data-test="hero">hero</div>
     <div data-test="tours">tours</div>
     <div data-test="training">training</div>
@@ -24,7 +61,7 @@
     <div data-test="adv">adv</div>
     <div data-test="gallery">gallery</div>
     <div data-test="form">form</div>
-    <div data-test="footer">footer</div>
+    <div data-test="footer">footer</div> -->
     <script type="module" src="js/main.js"></script>
   </body>
 
